# remember5-telegram-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODOLIST.md  alembic.ini  bot_database.db  compose.yml  main.py  pyproject.toml
bot/: config.py  database.py
bot/command/: __init__.py  commands.py  commands_config.py
bot/handlers/: __init__.py  btn_constants.py  command_handlers.py  config_handlers.py  error_handlers.py  help_handler.py  inline_handlers.py  media_handlers.py  reply_handlers.py  start_handlers.py  text_handlers.py
bot/migrations/: env.py
bot/migrations/versions/: da846f4dd355_add_user_table.py  e98ab9b6a3e6_add_user_table.py
bot/models/: __init__.py  user.py  video.py
bot/other/ershiyi/: README.md  main.py
bot/services/: video_service.py
bot/utils/: __init__.py  download_utils.py  logger.py  promission_utils.py
